Swagger endpoint /users/{id} (GET)
